syntax = "proto3";

option go_package = "proto/booking";

import "google/api/annotations.proto";

service BookingService {
  rpc GetAll(BK_Request) returns (BK_Response) {
    option (google.api.http) = {
      get: "/booking"
    };
  }
}

message BK_Request {
  string name = 1;
}

message BK_Response {
  string message = 2;
}